--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,32 +209,36 @@ header .localization li a {
 footer {
   text-align: center;
   text-transform: uppercase;
-  margin-top: 14px;
+  padding-top: 40px;
   margin-bottom: 50px;
   font-size: 14px;
 }
-/* line 111, sass/main.sass */
+/* line 106, sass/main.sass */
+#home footer {
+  padding-top: 14px;
+}
+/* line 113, sass/main.sass */
 footer ul {
   margin-bottom: 10px;
 }
-/* line 113, sass/main.sass */
+/* line 115, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 117, sass/main.sass */
+/* line 119, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 120, sass/main.sass */
+/* line 122, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 124, sass/main.sass */
+/* line 126, sass/main.sass */
 .banners .banner-arrows {
   position: absolute;
   z-index: 10;
@@ -242,7 +246,7 @@ footer ul li:last-child {
   margin-top: -30px;
   width: 100%;
 }
-/* line 130, sass/main.sass */
+/* line 132, sass/main.sass */
 .banners .banner-arrows li {
   width: 32px;
   height: 60px;
@@ -263,34 +267,34 @@ footer ul li:last-child {
   transition-duration: 0.2s;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 130, sass/main.sass */
+  /* line 132, sass/main.sass */
   .banners .banner-arrows li {
     background-image: url("../images/site/arrows@2x.png");
     background-size: 64px 60px;
   }
 }
-/* line 142, sass/main.sass */
+/* line 144, sass/main.sass */
 .banners .banner-arrows li:hover {
   opacity: 0.6;
 }
-/* line 144, sass/main.sass */
+/* line 146, sass/main.sass */
 .banners .banner-arrows li.previous {
   background-position: top left;
   left: 20px;
 }
-/* line 147, sass/main.sass */
+/* line 149, sass/main.sass */
 .banners .banner-arrows li.next {
   background-position: top right;
   right: 20px;
 }
-/* line 151, sass/main.sass */
+/* line 153, sass/main.sass */
 .banners .banner-dots {
   position: absolute;
   z-index: 10;
   top: 657px;
   left: 50%;
 }
-/* line 156, sass/main.sass */
+/* line 158, sass/main.sass */
 .banners .banner-dots li {
   width: 22px;
   height: 22px;
@@ -301,18 +305,18 @@ footer ul li:last-child {
   margin-right: 8px;
   display: inline-block;
 }
-/* line 165, sass/main.sass */
+/* line 167, sass/main.sass */
 .banners .banner-dots li:last-child {
   margin-right: 0;
 }
-/* line 167, sass/main.sass */
+/* line 169, sass/main.sass */
 .banners .banner-dots li.active {
   border: 3px solid white;
   width: 16px;
   height: 16px;
   background-color: transparent;
 }
-/* line 173, sass/main.sass */
+/* line 175, sass/main.sass */
 .banners.banner_slideshow .banner {
   position: absolute;
   left: 0;
@@ -321,7 +325,7 @@ footer ul li:last-child {
   bottom: 0;
   opacity: 0;
 }
-/* line 180, sass/main.sass */
+/* line 182, sass/main.sass */
 .banners.banner_slideshow .banner.active {
   opacity: 1;
   z-index: 5;
@@ -334,11 +338,11 @@ footer ul li:last-child {
   -o-transition-duration: 1s;
   transition-duration: 1s;
 }
-/* line 185, sass/main.sass */
+/* line 187, sass/main.sass */
 .banners.banner_slideshow .banner.previously_active {
   opacity: 1;
 }
-/* line 187, sass/main.sass */
+/* line 189, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -352,7 +356,7 @@ footer ul li:last-child {
   color: white;
   font-size: 46px;
 }
-/* line 197, sass/main.sass */
+/* line 199, sass/main.sass */
 .banners .banner .banner-headline-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -360,7 +364,7 @@ footer ul li:last-child {
   display: table;
   height: 93%;
 }
-/* line 203, sass/main.sass */
+/* line 205, sass/main.sass */
 .banners .banner .banner-headline {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 46px;
@@ -369,64 +373,64 @@ footer ul li:last-child {
   vertical-align: middle;
   text-align: center;
 }
-/* line 210, sass/main.sass */
+/* line 212, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 215, sass/main.sass */
+/* line 217, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 219, sass/main.sass */
+/* line 221, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 222, sass/main.sass */
+/* line 224, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 225, sass/main.sass */
+/* line 227, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 72px;
 }
-/* line 228, sass/main.sass */
+/* line 230, sass/main.sass */
 .container #wine h1 {
   font-size: 94px;
 }
-/* line 230, sass/main.sass */
+/* line 232, sass/main.sass */
 .container p {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 10px;
 }
-/* line 234, sass/main.sass */
+/* line 236, sass/main.sass */
 .container strong {
   font-weight: bold;
 }
-/* line 236, sass/main.sass */
+/* line 238, sass/main.sass */
 .container em {
   font-style: italic;
 }
-/* line 238, sass/main.sass */
+/* line 240, sass/main.sass */
 .container ul {
   padding-left: 25px;
   font-size: 18px;
   line-height: 28px;
   padding-right: 100px;
 }
-/* line 243, sass/main.sass */
+/* line 245, sass/main.sass */
 .container ul li {
   list-style: disc;
   margin-bottom: 10px;
 }
 
-/* line 248, sass/main.sass */
+/* line 250, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -434,26 +438,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 254, sass/main.sass */
+/* line 256, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 258, sass/main.sass */
+/* line 260, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 260, sass/main.sass */
+/* line 262, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 263, sass/main.sass */
-.page-content .page-text h1 {
-  margin-bottom: 45px;
-}
 /* line 265, sass/main.sass */
+.page-content .page-text h1 {
+  margin-bottom: 35px;
+}
+/* line 267, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -469,7 +473,7 @@ main#content .container {
   font-size: 30px;
   line-height: 68px;
 }
-/* line 277, sass/main.sass */
+/* line 279, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -484,48 +488,48 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 277, sass/main.sass */
+  /* line 279, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 289, sass/main.sass */
+/* line 291, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 292, sass/main.sass */
+/* line 294, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 295, sass/main.sass */
+/* line 297, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 298, sass/main.sass */
+/* line 300, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 300, sass/main.sass */
+/* line 302, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 303, sass/main.sass */
+/* line 305, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications {
   padding: 0;
 }
-/* line 305, sass/main.sass */
+/* line 307, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications li {
   list-style: none;
 }
-/* line 307, sass/main.sass */
+/* line 309, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 309, sass/main.sass */
+/* line 311, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -540,7 +544,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 322, sass/main.sass */
+/* line 324, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -549,14 +553,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 329, sass/main.sass */
+/* line 331, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 335, sass/main.sass */
+/* line 337, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -568,7 +572,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 346, sass/main.sass */
+/* line 348, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -580,32 +584,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 356, sass/main.sass */
+/* line 358, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 359, sass/main.sass */
+/* line 361, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 361, sass/main.sass */
+/* line 363, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 329, sass/main.sass */
+  /* line 331, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 367, sass/main.sass */
+  /* line 369, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 370, sass/main.sass */
+  /* line 372, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
