--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -103,9 +103,11 @@ header
         text-decoration: none
         color: $text-gray
 footer
+  #home &
+    padding-top: 14px
   text-align: center
   text-transform: uppercase
-  margin-top: 14px
+  padding-top: 40px
   margin-bottom: 50px
   font-size: 14px
   ul
@@ -261,7 +263,7 @@ footer
     float: left
     width: 596px
     h1
-      margin-bottom: 45px
+      margin-bottom: 35px
     h2
       @include box-sizing('border-box')
       border-top: 1px solid $copper
